objects/Certificate_Contact_Method__c/Certificate_Contact_Method__c.object-meta.xml
<CustomObject>
    <label>Certificate Contact Method</label>
    <nameField>
        <displayFormat>CCM-{0000}</displayFormat>
        <label>Certificate Contact Method Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Certificate Contact Method</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>