objects/Certificate_Contact_Method__c/fields/Certificate_Contact_Purpose__c.field-meta.xml
<CustomField>
    <fullName>Certificate_Contact_Purpose__c</fullName>
    <label>Certificate Contact Purpose</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Contact_Purpose</valueSetName>
    </valueSet>
</CustomField>