objects/Certificate_Contact_Method__c/fields/Contact_Method__c.field-meta.xml
<CustomField>
    <fullName>Contact_Method__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact Method</label>
    <referenceTo>Contact_Method__c</referenceTo>
    <relationshipLabel>Certificate Contact Method</relationshipLabel>
    <relationshipName>Certificate_Contact_Method</relationshipName>
    <type>Lookup</type>
</CustomField>