objects/Certificate_Contact_Method__c/fields/Policy_Certificate__c.field-meta.xml
<CustomField>
    <fullName>Policy_Certificate__c</fullName>
    <label>Policy Certificate</label>
    <referenceTo>Policy_Certificate__c</referenceTo>
    <relationshipLabel>Certificate Contact Method</relationshipLabel>
    <relationshipName>Certificate_Contact_Method</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>